--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
                     <button class="btn-primary btn-sm mt-2">next</button>
                 </div>
             </div>
-            <div class="card mt-5">
-                <div class="card-body text-dark">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, libero!</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, maiores!</p>
+            <div class="card mt-5 d-none" id="sentenceFather">
+                <div class="card-body text-dark" id="sentence">
+
                 </div>
             </div>
         </div>
