--- a/index.html
+++ b/index.html
@@ -30,14 +30,28 @@
                         <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <p>单词本</p>
+                    <div class="offcanvas-body-self">
+                        <ul class="navbar-nav justify-content-end">
+                            <li id="bookListContainer" class="nav-item">
+                                <div class="d-flex p-3" data-bs-toggle="collapse" data-bs-target="#collapse"
+                                    aria-expanded="false" aria-controls="collapse">
+                                    <span>单词本</span>
+                                    <span id="iconElement" class="ms-auto"><i class="bi bi-chevron-down"></i></span>
+                                </div>
                             </li>
+                            <div class="collapse" id="collapse">
+                                <div id="bookList" class="list-group" id="list-tab" role="tablist">
+                                    <a href="#" class="list-group-item list-group-item-action" id="list-Gaokao-list" data-bs-toggle="list"  role="tab" aria-controls="list-Gaokao" data-id="0">高考词汇 Gaokao</a>
+                                    <a href="#" class="list-group-item list-group-item-action" id="list-CET-4-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-4" data-id="1">四级词汇 CET-4</a>
+                                    <a href="#" class="list-group-item list-group-item-action" id="list-CET-6-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-6" data-id="2">六级词汇 CET-6</a>
+                                    <a href="#" class="list-group-item list-group-item-action" id="list-IELTS-list" data-bs-toggle="list"  role="tab" aria-controls="list-IELTS" data-id="3">雅思词汇 IELTS</a>
+                                    <a href="#" class="list-group-item list-group-item-action" id="list-TOEFL-list" data-bs-toggle="list"  role="tab" aria-controls="list-TOEFL" data-id="4">托福词汇 TOEFL</a>
+                                </div>
+                            </div>
                         </ul>
                     </div>
-                    <div class="offcanvas-footer">
+                    
+                    <div class="offcanvas-footer-self">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item d-flex">
                                 <p>自动发音</p>
