Add choose round

--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
                         <p>Remaining: <span id="remaining">30</span></p>
                     </div>
                     <div class="ms-auto">
-                        <p>round: <span id="round">1</span></p>
+                        <!-- <p>round: <span id="round">1</span></p> -->
+                        <span>round: </span>
+                        <select id="round">
+                            <option selected>1</option>
+                          </select>
+                          
                     </div>
                 </div>
                 <div class="d-flex mx-auto flex-column d-none" id="btnBox">
