--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                                 </div>
                             </li>
                             <div class="collapse" id="collapse">
-                                <div id="bookList" class="list-group" id="list-tab" role="tablist">
-                                    <a href="#" class="list-group-item list-group-item-action" id="list-Gaokao-list" data-bs-toggle="list"  role="tab" aria-controls="list-Gaokao" data-id="0">高考词汇 Gaokao</a>
-                                    <a href="#" class="list-group-item list-group-item-action" id="list-CET-4-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-4" data-id="1">四级词汇 CET-4</a>
-                                    <a href="#" class="list-group-item list-group-item-action" id="list-CET-6-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-6" data-id="2">六级词汇 CET-6</a>
-                                    <a href="#" class="list-group-item list-group-item-action" id="list-IELTS-list" data-bs-toggle="list"  role="tab" aria-controls="list-IELTS" data-id="3">雅思词汇 IELTS</a>
-                                    <a href="#" class="list-group-item list-group-item-action" id="list-TOEFL-list" data-bs-toggle="list"  role="tab" aria-controls="list-TOEFL" data-id="4">托福词汇 TOEFL</a>
+                                <div class="list-group" id="list-tab" role="tablist">
+                                    <a href="#" class="list-group-item list-group-item-action bookItem" id="list-Gaokao-list" data-bs-toggle="list"  role="tab" aria-controls="list-Gaokao" data-id="0">高考词汇 Gaokao</a>
+                                    <a href="#" class="list-group-item list-group-item-action bookItem" id="list-CET-4-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-4" data-id="1">四级词汇 CET-4</a>
+                                    <a href="#" class="list-group-item list-group-item-action bookItem" id="list-CET-6-list" data-bs-toggle="list"  role="tab" aria-controls="list-CET-6" data-id="2">六级词汇 CET-6</a>
+                                    <a href="#" class="list-group-item list-group-item-action bookItem" id="list-IELTS-list" data-bs-toggle="list"  role="tab" aria-controls="list-IELTS" data-id="3">雅思词汇 IELTS</a>
+                                    <a href="#" class="list-group-item list-group-item-action bookItem" id="list-TOEFL-list" data-bs-toggle="list"  role="tab" aria-controls="list-TOEFL" data-id="4">托福词汇 TOEFL</a>
                                 </div>
                             </div>
                         </ul>
