--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="d-flex mx-auto flex-column d-none" id="btnBox">
                     <button class="btn-primary btn-sm">restart</button>
-                    <button class="btn-primary btn-sm mt-2">next</button>
+                    <button id="nextBtn" class="btn-primary btn-sm mt-2">next</button>
                 </div>
             </div>
             <div class="card mt-3 d-none" id="sentenceFather">
